--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 
 <script src="https://tonejs.github.io/build/Tone.min.js"></script>
 <script src="play.js"></script>
+<script>
+  document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+  ':35729/livereload.js?snipver=1"></' + 'script>')
+</script>
 </body>
 </html>
